[gd_scene load_steps=10 format=3 uid="uid://dvwsbxa7kdgob"]

[ext_resource type="Script" path="res://characters/player_control.gd" id="1_cfkfe"]
[ext_resource type="Script" path="res://script/player.gd" id="1_oj7ea"]
[ext_resource type="Resource" uid="uid://dfuucb5spinx8" path="res://script/object_inventory/inventory/resources/inventory.tres" id="2_ks6fo"]

[sub_resource type="CanvasTexture" id="CanvasTexture_pds3y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p8wqi"]
size = Vector2(107.235, 82.99)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tclry"]
resource_local_to_scene = true
size = Vector2(200, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yq1h1"]
resource_local_to_scene = true
size = Vector2(166, 107)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwfji"]
size = Vector2(150, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2a8vr"]
size = Vector2(140, 160)

[node name="Player" type="Node"]
script = ExtResource("1_oj7ea")

[node name="PlayerControl" type="Node2D" parent="." node_paths=PackedStringArray("general_interaction_area")]
script = ExtResource("1_cfkfe")
inventory = ExtResource("2_ks6fo")
general_interaction_area = NodePath("GeneralInteraction")

[node name="Camera2D" type="Camera2D" parent="PlayerControl"]
position = Vector2(0, -0.5)
zoom = Vector2(0.6, 0.6)

[node name="TextureRect" type="TextureRect" parent="PlayerControl/Camera2D"]
modulate = Color(0.0784314, 0.0784314, 0.0784314, 1)
z_index = -10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1999.0
offset_top = -1500.0
offset_right = 1892.0
offset_bottom = 1500.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_pds3y")

[node name="CameraCollision" type="Area2D" parent="PlayerControl/Camera2D"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerControl/Camera2D/CameraCollision"]
shape = SubResource("RectangleShape2D_p8wqi")

[node name="ItemCollection" type="Area2D" parent="PlayerControl"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerControl/ItemCollection"]
shape = SubResource("RectangleShape2D_tclry")
debug_color = Color(0.803922, 0.419608, 0, 0.419608)

[node name="DoorInteraction" type="Area2D" parent="PlayerControl"]
position = Vector2(0, -1)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerControl/DoorInteraction"]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_yq1h1")
debug_color = Color(0.235294, 0.705882, 0.235294, 0.419608)

[node name="TransparencyActivation" type="Area2D" parent="PlayerControl"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerControl/TransparencyActivation"]
shape = SubResource("RectangleShape2D_nwfji")
debug_color = Color(0.705882, 0.705882, 0.705882, 0.419608)

[node name="GeneralInteraction" type="Area2D" parent="PlayerControl"]
position = Vector2(0, -1)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerControl/GeneralInteraction"]
position = Vector2(0, 24)
shape = SubResource("RectangleShape2D_2a8vr")
debug_color = Color(0.992157, 0, 0.254902, 0.419608)

[connection signal="area_entered" from="PlayerControl/ItemCollection" to="PlayerControl" method="_on_item_contact"]
[connection signal="area_entered" from="PlayerControl/DoorInteraction" to="PlayerControl" method="_on_door_contact"]
[connection signal="area_entered" from="PlayerControl/TransparencyActivation" to="PlayerControl" method="_on_transparency_enter"]
[connection signal="area_exited" from="PlayerControl/TransparencyActivation" to="PlayerControl" method="_on_transparency_exit"]
[connection signal="area_entered" from="PlayerControl/GeneralInteraction" to="PlayerControl" method="_on_interaction_area_enter"]
[connection signal="area_exited" from="PlayerControl/GeneralInteraction" to="PlayerControl" method="_on_interaction_area_exit"]
